Finalize mappers update